leetcode username update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer>
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/radhey-sharma-06235a238/" target="_blank" title="LinkedIn"><img src="img/linkedin.svg" alt=""></a>
-            <a href="https://leetcode.com/Pointy_Wierdo_13/" target="_blank" title="Leetcode"><img src="img/leetcode.png" alt="Leetcode"></a>
+            <a href="https://leetcode.com/radheysharma/" target="_blank" title="Leetcode"><img src="img/leetcode.png" alt="Leetcode"></a>
             <a href="https://www.codechef.com/users/radhey_13" target="_blank" title="Codechef"><img src="img/codechef.svg" alt="Codechef"></a>
             <a href="https://github.com/radheysharma" target="_blank" title="GitHub"><img src="img/github.svg" alt="Github"></a>
             <!-- Add more social media links as needed -->
