--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-xrDg6n99ZM7VUFewt8pc6Xyyz50CetA72bJj1xU+DMXOp1g4+lmr5rR+Wx2AcT1Qi7bWRZ0l5l0jqv1oLqOgbePQ==" crossorigin="anonymous" />
-    <title>Your Name - Personal Website</title>
+    <title>Radhey Sharma | Portfolio</title>
 </head>
 <body>
 
