changed profile pic

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <section id="about">            
             <h2>About me</h2>
-            <img src="img/IMG-20220728-WA0010.jpg" alt="My Image">
+            <img src="img/20240609_132016copy.jpg" alt="My Image">
             <p>
                 Hey there!<br>I'm Radhey Sharma, a passionate programmer based in India. 
                 I spend my days coding, debugging, and crafting software solutions that make a positive impact.<br><br>
