mentioned bluetooth use in gcrsv project

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <h2><li class="project"><a href="https://github.com/radheysharma/GCRSV">Gesture Controlled Rescue and Search Vehicle (GCRSV)</a></li></h2>
                 <h3>Description:</h3>
                 <p>The Gesture-Controlled Rescue and Search Vehicle (GCRSV) project introduces an innovative approach 
-                    to search and rescue robotics by implementing a custom potentiometer model for wrist orientation 
-                    detection.</p>
+                    to search and rescue robotics by implementing a remote Gesture control built with the help of 
+                    custom potentiometer and HC-05 Bluetooth module for remote connectivity.</p>
                 <p>Key Skills: <span class = "skills">Arduino</span>, <span class = "skills">Arduino IDE</span>, <span class = "skills">Bluetooth</span>, <span class = "skills">C (Programming Language)</span>, <span class = "skills">Internet of Things (IoT)</span></p>
 
 
@@ -86,7 +86,6 @@
             <a href="https://leetcode.com/radheysharma/" target="_blank" title="Leetcode"><img src="img/leetcode.png" alt="Leetcode"></a>
             <a href="https://www.codechef.com/users/radhey_13" target="_blank" title="Codechef"><img src="img/codechef.svg" alt="Codechef"></a>
             <a href="https://github.com/radheysharma" target="_blank" title="GitHub"><img src="img/github.svg" alt="Github"></a>
-            <!-- Add more social media links as needed -->
         </div>
         <p>Radhey Sharma</p>
     </footer>
