--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <section id="projects">
             <h2>Projects</h2>
             <ol>
-                <h2><li class="project"><a href="https://github.com/radheysharma/Chess-from-scratch">Chess from scratch</a></li></h2>
+                <h2><li class="project"><a href="https://github.com/radheysharma/Chess-from-scratch" target="_blank" title="Chess-from-scratch">Chess from scratch</a></li></h2>
                 <h3>Description:</h3>
                 <p>Built a program from scratch that implements all features of chess game (supports complex moves 
                     like en passant, pawn promotion, castling) and play a game of chess on terminal.</p>
                 <p>Key Skills: <span class = "skills">C (Programming Language)</span>, <span class = "skills">Data Structures</span>, <span class = "skills">Problem Solving</span>, <span class = "skills">Chess</span>, <span class = "skills">Game Development</span></p>
 
 
-                <h2><li class="project"><a href="https://github.com/radheysharma/Cardiovascular-Disease-Prediction-using-Machine-Learning">Cardiovascular Disease Prediction using Machine Learning</a></li></h2>
+                <h2><li class="project"><a href="https://github.com/radheysharma/Cardiovascular-Disease-Prediction-using-Machine-Learning" target="_blank" title="Cardiovascular-Disease-Prediction">Cardiovascular Disease Prediction using Machine Learning</a></li></h2>
                 <h3>Description:</h3>
                 <p>This a project aimed at leveraging advanced machine learning algorithms to predict the likelihood 
                     of cardiovascular diseases in individuals based on various health parameters (such as age, gender, 
@@ -46,7 +46,7 @@
                 <p>Key Skills: <span class = "skills">Python</span>, <span class = "skills">Machine Learning</span>, <span class = "skills">pandas</span>, <span class = "skills">numpy</span>, <span class = "skills">Problem Solving</span></p>
 
 
-                <h2><li class="project"><a href="https://github.com/radheysharma/GCRSV">Gesture Controlled Rescue and Search Vehicle (GCRSV)</a></li></h2>
+                <h2><li class="project"><a href="https://github.com/radheysharma/GCRSV" target="_blank" title="GCRSV">Gesture Controlled Rescue and Search Vehicle (GCRSV)</a></li></h2>
                 <h3>Description:</h3>
                 <p>The Gesture-Controlled Rescue and Search Vehicle (GCRSV) project introduces an innovative approach 
                     to search and rescue robotics by implementing a remote Gesture control built with the help of 
@@ -54,7 +54,7 @@
                 <p>Key Skills: <span class = "skills">Arduino</span>, <span class = "skills">Arduino IDE</span>, <span class = "skills">Bluetooth</span>, <span class = "skills">C (Programming Language)</span>, <span class = "skills">Internet of Things (IoT)</span></p>
 
 
-                <h2><li class="project"><a href="ecom/index.html">GameZX E-Commerce Website Template</a></li></h2>
+                <h2><li class="project"><a href="ecom/index.html" target="_blank" title="GameZX">GameZX E-Commerce Website Template</a></li></h2>
                 <h3>Description:</h3>
                 <p>GameZX is a e-commerce website template designed using HTML, CSS, and JavaScript. The site emulates the experience of browsing through a collection of video games across various genres and platforms. Key features include a user-friendly interface, game listings, detailed game descriptions, user reviews, a mockup of login and signup pages. This project focuses on the front-end design and layout, providing a foundational template that can be further developed with backend functionalities in the future.</p>
                 <p>Key Skills: <span class = "skills">HTML/CSS</span>, <span class = "skills">JavaScript</span></p>
