--- a/index.html
+++ b/index.html
@@ -27,14 +27,9 @@
         <section id="projects">
             <h2>Projects</h2>
             <ol>
-                <h2><li class="project"><a href="https://github.com/radheysharma/Chess-from-scratch" target="_blank" title="Chess-from-scratch">Chess from scratch</a></li></h2>
-                <h3>Description:</h3>
-                <p>Built a program from scratch that implements all features of chess game (supports complex moves 
-                    like en passant, pawn promotion, castling) and play a game of chess on terminal.</p>
-                <p>Key Skills: <span class = "skills">C (Programming Language)</span>, <span class = "skills">Data Structures</span>, <span class = "skills">Problem Solving</span>, <span class = "skills">Chess</span>, <span class = "skills">Game Development</span></p>
-
-
-                <h2><li class="project"><a href="https://github.com/radheysharma/Cardiovascular-Disease-Prediction-using-Machine-Learning" target="_blank" title="Cardiovascular-Disease-Prediction">Cardiovascular Disease Prediction using Machine Learning</a></li></h2>
+                <h2><li class="project"><a href="https://github.com/radheysharma/Cardiovascular-Disease-Prediction-using-Machine-Learning"
+                        target="_blank" title="Cardiovascular-Disease-Prediction">Cardiovascular Disease Prediction using Machine Learning</a>
+                    </li></h2>
                 <h3>Description:</h3>
                 <p>This a project aimed at leveraging advanced machine learning algorithms to predict the likelihood 
                     of cardiovascular diseases in individuals based on various health parameters (such as age, gender, 
@@ -43,15 +38,53 @@
                     models that can assist healthcare professionals in early diagnosis and personalized treatment 
                     planning. Through the fusion of data science and healthcare, this endeavor aims to contribute to 
                     preventive medicine, potentially saving lives and improving overall public health outcomes.</p>
-                <p>Key Skills: <span class = "skills">Python</span>, <span class = "skills">Machine Learning</span>, <span class = "skills">pandas</span>, <span class = "skills">numpy</span>, <span class = "skills">Problem Solving</span></p>
+                <p>Key Skills: <span class = "skills">Python</span>, <span class = "skills">Machine Learning</span>, <span class = "skills">pandas</span>,
+                    <span class = "skills">numpy</span>, <span class = "skills">Problem Solving</span></p>
 
 
-                <h2><li class="project"><a href="https://github.com/radheysharma/GCRSV" target="_blank" title="GCRSV">Gesture Controlled Rescue and Search Vehicle (GCRSV)</a></li></h2>
+                <h2><li class="project"><a href="https://github.com/radheysharma/PlateManagement" target="_blank" title="Plate Management System">
+                        Plate Management System</a>
+                    </li></h2>
+
+                <h3>Description:</h3>
+                <p>Developed a License Plate Management System in C++ using a self-implemented Red-Black Tree for efficient license plate registration
+                    and lookup operations. The project supports customized and randomly generated license plates, range queries, and annual revenue tracking.</p>
+
+                <p>Key Skills: <span class = "skills">C++</span>, <span class = "skills">Data Structures</span>,
+                    <span class = "skills">Algorithms</span>, <span class = "skills">OOP</span></p>
+
+                    
+                <h2><li class="project">
+                    <a href="https://github.com/radheysharma/Chess-from-scratch" target="_blank" title="Chess-from-scratch">Chess from scratch</a>
+                    </li></h2>
+
+                <h3>Description:</h3>
+                <p>Built a program from scratch that implements all features of chess game (supports complex moves 
+                    like en passant, pawn promotion, castling) and play a game of chess on terminal.</p>
+
+                <p>Key Skills: <span class = "skills">C (Programming Language)</span>, <span class = "skills">Data Structures</span>,
+                    <span class = "skills">Problem Solving</span>, <span class = "skills">Chess</span>, <span class = "skills">Game Development</span></p>
+
+
+                <h2><li class="project"><a href="https://github.com/radheysharma/GCRSV" target="_blank" title="GCRSV">
+                        Gesture Controlled Rescue and Search Vehicle (GCRSV)</a>
+                    </li></h2>
                 <h3>Description:</h3>
                 <p>The Gesture-Controlled Rescue and Search Vehicle (GCRSV) project introduces an innovative approach 
                     to search and rescue robotics by implementing a remote Gesture control built with the help of 
                     custom potentiometer and HC-05 Bluetooth module for remote connectivity.</p>
-                <p>Key Skills: <span class = "skills">Arduino</span>, <span class = "skills">Arduino IDE</span>, <span class = "skills">Bluetooth</span>, <span class = "skills">C (Programming Language)</span>, <span class = "skills">Internet of Things (IoT)</span></p>
+                <p>Key Skills: <span class = "skills">Arduino</span>, <span class = "skills">Arduino IDE</span>, <span class = "skills">Bluetooth</span>, 
+                    <span class = "skills">C (Programming Language)</span>, <span class = "skills">Internet of Things (IoT)</span></p>
+
+
+                <h2><li class="project"><a href="https://github.com/radheysharma/P2PFileSharing" target="_blank" title="P2P File Sharing">
+                        P2P File Sharing System</a>
+                    </li></h2>
+                <h3>Description:</h3>
+                <p>Developed a P2P file sharing client (like BitTorrent) over TCP in Java, implementing a custom protocol and managing peer state with bitfields,
+                    and implemented the core choking/unchoking mechanism to incentivize data exchange and manage distributed bandwidth allocation.</p>
+                <p>Key Skills: <span class = "skills">Arduino</span>, <span class = "skills">Arduino IDE</span>, <span class = "skills">Bluetooth</span>, 
+                    <span class = "skills">Java Concurrency</span>, <span class = "skills">TCP sockets</span></p>
 
 
                 <h2><li class="project"><a href="ecom/index.html" target="_blank" title="GameZX">GameZX E-Commerce Website Template</a></li></h2>
@@ -73,7 +106,7 @@
                 My curiosity drives me to constantly explore new technologies and stay ahead in the ever-evolving 
                 world of programming.<br><br>I believe in the power of collaboration and open-source contributions 
                 to foster innovation and growth. Let's connect and discuss how we can leverage technology to build 
-                amazing things.<br><br>You can <a href="mailto:radhey.219311078@muj.manipal.edu">drop me an email</a> 
+                amazing things.<br><br>You can <a href="mailto:radhey132004@gmail.com">drop me an email</a> 
                 or find me on the following platforms.<br>
             </p>
         </section>
